--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <div class="header">
       <div class="nav">
          <img src="resources/images/logo-white.png">
+         <span class="menu-trigger">Menu</span>
          <p>Tortoiseshell Optics</p>
          <ul>
            <li><a href="#">Services</a></li>
@@ -24,10 +25,6 @@
       </div>
       </div>
   </header>
-
-  <!-- <div id="banner"> -->
-    <!-- <h1>DON'T JUST LOOK, SEE.</h1> -->
-  <!-- </div> -->
 
 <div class="container">
   <div id="column1a">
